@@ -17,11 +17,11 @@ configfile="@nsdconfigfile@"
 # The directory where NSD binaries reside
 sbindir="@sbindir@"
 
-# how verbose is zonec run. Specify Nothing (empty string), -v or -vv.
-ZONEC_VERBOSE=-v
+# how verbose is zonec run. Specify Nothing " ", -v or -vv.
+NSDC_ZONEC_VERBOSE=${NSDC_ZONEC_VERBOSE:--v}
 
 # how patch is done. Specify 1 (with use of textfiles, default) or 0 (without) 
-PATCH_STYLE=1
+NSDC_PATCH_STYLE=${NSDC_PATCH_STYLE:-1}
 
 #
 # You sure heard this many times before: NO USER SERVICEABLE PARTS BELOW
